--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,15 +2,18 @@
   "env": {
     "browser": true,
     "commonjs": true,
-    "es2021": true
+    "es6": true
   },
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "parserOptions": {
+    "ecmaVersion": 10,
+    "parser": "@babel/eslint-parser",
+    "requireConfigFile": false,
+    "sourceType": "module"
+  },
   "rules": { "eqeqeq": 2 },
   "root": true
 }
