--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
+# Dependencies
+/node_modules
+# Production
+/build
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.orig
+package-lock.json
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-# Production
-node_modules
-dist
-dist-ssr
-*.local
-# Editor
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
