--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "tic-tac-toe",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "private": true,
   "homepage": "https://eldarlrd.github.io/tic-tac-toe",
   "scripts": {
     "start": "inferno-scripts --openssl-legacy-provider start",
     "build": "inferno-scripts --openssl-legacy-provider build",
-    "pretty": "prettier --write src/**/*.js",
+    "pretty": "prettier --write 'src/**/*.js'",
     "lint": "eslint src --ext js --report-unused-disable-directives",
     "format": "yarn pretty && yarn lint --fix",
     "deploy": "yarn build && gh-pages -b deploy -m 'build: Deployment' -d build",
