--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+  "root": true,
   "env": {
     "browser": true,
     "commonjs": true,
@@ -6,14 +7,14 @@
   },
   "extends": [
     "eslint:recommended",
+    "inferno-app",
     "prettier"
   ],
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
-    "ecmaVersion": 10,
-    "parser": "@babel/eslint-parser",
-    "requireConfigFile": false,
-    "sourceType": "module"
+    "ecmaVersion": 14,
+    "sourceType": "module",
+    "requireConfigFile": false
   },
-  "rules": { "eqeqeq": 2 },
-  "root": true
+  "rules": { "eqeqeq": 2 }
 }
