--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-# Dependencies
-/node_modules
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 # Production
-/build
+node_modules
+build
 # Misc
 .DS_Store
 .env.local
@@ -9,8 +12,3 @@
 .env.test.local
 .env.production.local
 *.orig
-package-lock.json
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
