--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,25 @@
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 # Production
+404.html
+coverage
 node_modules
-build
-# Misc
+dist
+dist-ssr
+*.local
+# Editor
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-*.orig
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
