--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tic-tac-toe",
   "private": true,
-  "version": "1.3.1",
+  "version": "1.4.0",
   "type": "module",
   "keywords": [
     "tic-tac-toe",
@@ -9,46 +9,62 @@
   ],
   "description": "A classic Tic Tac Toe game",
   "repository": "github:eldarlrd/tic-tac-toe",
-  "homepage": "https://eldarlrd.github.io/tic-tac-toe",
-  "author": "Eldar Pashazade <eldarlrd@pm.me> (https://eldarlrd.github.io)",
+  "homepage": "https://eldarlrd.is-a.dev/tic-tac-toe",
+  "author": "Eldar Pashazade <eldarlrd@pm.me> (https://eldarlrd.is-a.dev)",
   "license": "AGPL-3.0-only",
   "scripts": {
-    "start": "inferno-scripts --openssl-legacy-provider start",
-    "build": "yarn flow check && inferno-scripts --openssl-legacy-provider build",
-    "type": "flow-watch",
-    "deploy": "yarn build && gh-pages -b deploy -m 'build: Deployment' -d build",
-    "lint": "eslint src --ext .js,.jsx --report-unused-disable-directives",
-    "pretty": "prettier 'src/**/*.{js,jsx}' --write",
-    "format": "yarn lint --fix && yarn pretty"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview",
+    "deployer": "bun bundle && gh-pages -b prod -m 'build(prod): deployment' -d dist",
+    "lint": "eslint src",
+    "style": "stylelint 'src/**/*.{css,pcss,scss,sass,less,styl}'",
+    "pretty": "prettier '{src,__{tests,mocks,snapshots}__}/**/*.{ts,tsx,scss}' --write",
+    "format": "bun lint --fix && bun pretty",
+    "cut": "knip --fix --cache"
   },
   "prettier": {
     "singleQuote": true,
     "jsxSingleQuote": true,
     "bracketSameLine": true,
     "trailingComma": "none",
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "experimentalTernaries": true
   },
   "dependencies": {
-    "inferno": "^8.2.2",
-    "inferno-hyperscript": "^8.2.2",
-    "inferno-scripts": "7.0.4",
+    "@fontsource/patrick-hand": "^5.2.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tachyons": "^4.12.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.22.9",
-    "eslint-config-prettier": "^9.0.0",
-    "flow-bin": "^0.220.1",
-    "flow-watch": "^2.0.0",
-    "gh-pages": "^6.0.0",
-    "prettier": "^3.0.3"
-  },
-  "eslintIgnore": [
-    "index.js"
-  ],
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+    "@eslint/js": "^9.34.0",
+    "@types/eslint-plugin-jsx-a11y": "^6.10.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@typescript-eslint/parser": "^8.42.0",
+    "@vitejs/plugin-react-swc": "^4.0.1",
+    "esbuild": "^0.25.9",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-n": "^17.21.3",
+    "eslint-plugin-no-relative-import-paths": "^1.6.1",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.3.0",
+    "globals": "^16.3.0",
+    "knip": "^5.63.1",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.42.0",
+    "vite-plugin-pwa": "^1.0.3",
+    "vite-tsconfig-paths": "^5.1.4",
+    "workbox-core": "^7.3.0",
+    "workbox-precaching": "^7.3.0"
+  }
 }
